--- a/package.json
+++ b/package.json
@@ -19,15 +19,15 @@
     "babel-core": "6.24.1",
     "babel-eslint": "7.2.3",
     "babel-preset-es2015": "6.24.1",
+    "chai": "3.5.0",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-node": "4.2.2",
     "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-standard": "3.0.1",
     "mocha": "3.4.1",
-    "pre-git": "3.14.0",
-    "chai": "3.5.0",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-node": "4.2.2"
+    "pre-git": "3.14.0"
   },
   "keywords": [
     "profile",
@@ -62,6 +62,7 @@
     }
   },
   "dependencies": {
-    "opn": "5.0.0"
+    "opn": "5.0.0",
+    "yargs": "^8.0.1"
   }
 }
