--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "rawkit",
   "author": "Darcy Clarke <darcy@darcyclarke.me>",
-  "description": "Instantly open Chrome Inspector with the node --inspect flag",
+  "description": "rawkit grabs the chrome inspector URL returned from the node --inspect command and immediately opens devtools. No more clicking, selecting, copying/pasting or navigating. Just run the command and jump into debugging.",
   "version": "1.0",
   "homepage_url": "https://github.com/darcyclarke/rawkit",
   "incognito": "spanning",
@@ -13,13 +13,13 @@
     ]
   },
   "icons": {
-    "16": "icon.png",
-    "48": "icon.png",
-    "128": "icon.png"
+    "16": "icon-16.jpg",
+    "48": "icon-48.jpg",
+    "128": "icon-128.jpg"
   },
   "browser_action": {
     "name": "listens for $ node --inspect",
-    "default_icon": "icon.png"
+    "default_icon": "icon-128-box.png"
   },
   "permissions": [
     "activeTab",
