--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "rawkit",
   "version": "1.0.4",
   "description": "Open chrome devtools debugger",
-  "bin": "./index.js",
-  "files": [
-    "./index.js"
-  ],
+  "bin": {
+    "rawkit": "./index.js"
+  },
   "scripts": {
     "test": "mocha --compilers js:babel-core/register",
     "lint": "eslint .",
