--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "bin": {
     "rawkit": "./index.js"
   },
+  "files": [
+    "./bin/cli.js"
+  ],
   "scripts": {
     "test": "mocha --compilers js:babel-core/register ./test/**.test.js",
     "lint": "eslint .",
@@ -21,6 +24,7 @@
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-preset-es2015": "6.24.1",
+    "bdd-stdin": "0.2.0",
     "chai": "4.0.0",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
@@ -30,7 +34,7 @@
     "eslint-plugin-standard": "3.0.1",
     "mocha": "3.4.2",
     "pre-git": "3.14.1",
-    "standard-version": "^4.0.0"
+    "standard-version": "4.0.0"
   },
   "keywords": [
     "profile",
