--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "./bin/cli.js"
   ],
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register ./test/**.test.js",
+    "test": "mocha ./test/**.test.js",
     "lint": "eslint .",
     "admin": "node ./scripts/admin.js"
   },
@@ -24,6 +24,8 @@
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-preset-es2015": "6.24.1",
+    "bdd-stdin": "0.2.0",
+    "casual": "^1.5.14",
     "chai": "4.0.0",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
