--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "git+https://github.com/darcyclarke/rawkit.git"
   },
   "devDependencies": {
+    "alex": "^4.1.0",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-preset-es2015": "6.24.1",
