--- a/package.json
+++ b/package.json
@@ -37,20 +37,20 @@
     "standard-version": "4.2.0"
   },
   "keywords": [
-    "profile",
-    "darcy",
-    "darcyclarke",
-    "developer",
-    "designer",
-    "strategy",
-    "ux",
-    "web",
-    "development",
+    "inspect",
     "node",
-    "javascript",
-    "oss",
-    "css",
-    "html"
+    "devtools",
+    "developer",
+    "tools",
+    "open",
+    "opn",
+    "chrome",
+    "debug",
+    "node",
+    "debugger",
+    "browser",
+    "inspector",
+    "fast"
   ],
   "author": "Darcy Clarke <darcy@darcyclarke.me>",
   "license": "MIT",
