--- a/package.json
+++ b/package.json
@@ -69,7 +69,10 @@
     }
   },
   "dependencies": {
+    "lighthouse": "2.3.0",
     "opn": "5.1.0",
+    "semver-compare": "1.0.0",
+    "shelljs": "0.7.8",
     "yargs": "8.0.2"
   }
 }
