--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./test/index.test.js ./test/server.js --test args",
+    "test": "mocha ./test/index.test.js",
     "lint": "eslint .",
     "admin": "node ./scripts/admin.js"
   },
@@ -76,5 +76,8 @@
     "opn": "5.2.0",
     "semver-compare": "1.0.0",
     "yargs": "10.1.1"
+  },
+  "release": {
+    "analyzeCommits": "simple-commit-message"
   }
 }
