Fix issue with yargs and nodemon integration

--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "casual": "^1.5.14",
     "chai": "4.1.2",
     "cz-conventional-changelog": "^2.0.0",
-    "eslint": "4.11.0",
+    "eslint": "4.17.0",
     "eslint-config-standard": "11.0.0-beta.0",
-    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "6.0.0",
-    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-promise": "3.6.0",
     "eslint-plugin-standard": "3.0.1",
-    "mocha": "4.1.0",
+    "mocha": "5.0.1",
     "pre-git": "3.17.0",
     "standard-version": "4.3.0"
   },
@@ -73,9 +73,10 @@
     }
   },
   "dependencies": {
+    "getos": "^3.1.0",
     "opn": "5.2.0",
-    "semver-compare": "1.0.0",
-    "yargs": "10.1.1"
+    "semver": "^5.5.0",
+    "yargs": "11.0.0"
   },
   "release": {
     "analyzeCommits": "simple-commit-message"
