--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "mocha ./test/index.test.js",
     "lint": "eslint .",
-    "admin": "node ./scripts/admin.js"
+    "bundle": "node ./scripts/bundle.js"
   },
   "publishConfig": {
     "access": "public"
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "alex": "^5.0.0",
+    "archiver": "^2.1.1",
     "babel-core": "6.26.0",
     "babel-eslint": "^8.0.0",
     "babel-preset-es2015": "6.24.1",
