--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
       "pre-push": [
         "echo 'Pre-push checks...' && exit 0",
         "npm run lint",
-        "npm test"
+        "npm test",
+        "npm run bundle"
       ]
     },
     "commitizen": {
