--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,15 @@
 environment:
   matrix:
+    - nodejs_version: '8'
     - nodejs_version: '6'
     - nodejs_version: '4'
 install:
   - ps: Install-Product node $env:nodejs_version
   - set CI=true
-  - npm -g install npm@latest
+  - npm -g i npm@latest
   - set PATH=%APPDATA%\npm;%PATH%
-  - npm install
+  - npm i -g yarn
+  - yarn
 matrix:
   fast_finish: true
 build: off
