--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
       "pre-push": [
         "echo 'Pre-push checks...' && exit 0",
         "npm run lint",
-        "npm test"
+        "npm test",
+        "NODE_ENV=production yarn"
       ]
     },
     "commitizen": {
