--- a/package.json
+++ b/package.json
@@ -77,7 +77,10 @@
     "getos": "^3.1.1",
     "opn": "5.5.0",
     "semver": "^5.6.0",
-    "yargs": "13.2.2"
+    "yargs": "13.2.2",
+    "extend": "^3.0.2",
+    "deep-extend": "^0.6.0",
+    "debug": "^4.1.1"
   },
   "release": {
     "analyzeCommits": "simple-commit-message"
