--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "test": "mocha ./test/index.test.js",
     "lint": "eslint .",
-    "bundle": "node ./scripts/bundle.js"
+    "ext:bundle": "node ./scripts/bundle.js",
+    "ext:publish": "source .env && cd ./src/ && webstore upload --source=../dist/build-$npm_package_version.zip --auto-publish --extension-id $WS_ID --client-id $WS_CLIENT_ID --client-secret $WS_CLIENT_SECRET --refresh-token $WS_REFRESH_TOKEN",
+    "ext:edit": "open https://chrome.google.com/webstore/developer/dashboard"
   },
   "publishConfig": {
     "access": "public"
@@ -28,7 +30,7 @@
     "chai": "4.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "5.16.0",
-    "eslint-config-standard": "12.0.0",
+    "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "2.17.3",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.1.1",
