Update deployment settings & remove homepage from master branch

--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "pre-git": {
       "pre-push": [
         "echo 'Pre-push checks...' && exit 0",
-        "npm run lint",
-        "npm test",
+        "yarn run lint",
+        "yarn test",
         "NODE_ENV=production yarn"
       ]
     },
