--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -18,6 +18,7 @@
     "48": "icon-48.png",
     "128": "icon-128.png"
   },
+  "web_accessible_resources": ["launch.html"],
   "browser_action": {
     "default_icon": "icon-128.png"
   },
