--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "6.24.1",
     "bdd-stdin": "0.2.0",
     "chai": "4.2.0",
+    "chrome-launcher": "^0.10.7",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "5.16.0",
     "eslint-config-standard": "^12.0.0",
