--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "pre-git": {
       "pre-push": [
         "echo 'Pre-push checks...' && exit 0",
-        "yarn run lint",
-        "yarn test",
-        "NODE_ENV=production yarn"
+        "npm run lint",
+        "npm test",
+        "NODE_ENV=production npm"
       ]
     },
     "commitizen": {
